--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <link rel="stylesheet" href="style.css" />
-  <title>Hole and Mole Game</title>
+  <title>come here baby Game</title>
 </head>
 
 <body>
-  <h1>Catch me, bayby!</h1>
+  <h1>Come here baby!</h1>
   <h2 class="score-block">Score:<span class="score">0</span></h2>
 
   <div class="levels">
